applications/proxmox/endpoint-slice_pm3.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
- addresses:
  - 192.168.0.202
  conditions:
    ready: true
    serving: false
    terminating: false
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: pm3
  name: pm3
  namespace: proxmox
ports:
- appProtocol: http
  name: web
  port: 8006
  protocol: TCP
