applications/proxmox/service_pm2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.io/service.nativelb: "true"
  name: pm2
  namespace: proxmox
spec:
  ports:
  - name: web
    port: 443
    protocol: TCP
    targetPort: 8006
